fix: minor spacing updates

--- a/src/blocks/Panel/Panel.module.css
+++ b/src/blocks/Panel/Panel.module.css
@@ -1,9 +1,3 @@
-.frame {
-    display: flex;
-    flex-direction: column;
-    /* gap: 19px; */
-}
-
 .invert {
     color: rgb(var(--color-white));
 }
